fix multiple prompt timer bug

--- a/docs/update/v3.md
+++ b/docs/update/v3.md
@@ -2,6 +2,20 @@
 
 > 本页面由框架命令 `./zhamao generate:text update-log-md` 自动生成
 
+## v3.0.1
+
+> 更新时间：2023-02-11
+
+* 本次更新包含文档更新内容 1 个
+* 修复 Message 转换时的 Bug by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#289](https://github.com/zhamao-robot/zhamao-framework/pull/289)
+* 修复初始化命令兼容性问题 by [@sunxyw](https://github.com/sunxyw) in [PR#295](https://github.com/zhamao-robot/zhamao-framework/pull/295)
+* 修复安装脚本不使用内置 Composer by [@sunxyw](https://github.com/sunxyw) in [PR#296](https://github.com/zhamao-robot/zhamao-framework/pull/296)
+* 修复插件安装命令若干问题 by [@sunxyw](https://github.com/sunxyw) in [PR#297](https://github.com/zhamao-robot/zhamao-framework/pull/297)
+* 修复排程任务不支持提醒 by [@sunxyw](https://github.com/sunxyw) in [PR#298](https://github.com/zhamao-robot/zhamao-framework/pull/298)
+* **破坏性修改**：更改 prompt() 方法配置参数的特性 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#299](https://github.com/zhamao-robot/zhamao-framework/pull/299)
+
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.0.0...3.0.1>
+
 ## v3.0.0
 
 > 更新时间：2023-02-10
