update generated docs

--- a/docs/update/v3.md
+++ b/docs/update/v3.md
@@ -2,6 +2,15 @@
 
 > 本页面由框架命令 `./zhamao generate:text update-log-md` 自动生成
 
+## v3.1.1
+
+> 更新时间：2023-03-06
+
+* 修复 BotContext 使用 reply 后无法激活其他回调的问题 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#334](https://github.com/zhamao-robot/zhamao-framework/pull/334)
+* 修复 CommandArgument 在群组和讨论组中询问参数时未判断用户 ID 的 Bug by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#335](https://github.com/zhamao-robot/zhamao-framework/pull/335)
+
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.1.0...3.1.1>
+
 ## v3.1.0
 
 > 更新时间：2023-03-05
