--- a/docs/update/v3.md
+++ b/docs/update/v3.md
@@ -2,6 +2,41 @@
 
 > 本页面由框架命令 `./zhamao generate:text update-log-md` 自动生成
 
+## v3.1.5
+
+> 更新时间：2023-03-17
+
+* 添加 RuntimePreferences 配置目录回退 by [@sunxyw](https://github.com/sunxyw) in [PR#343](https://github.com/zhamao-robot/zhamao-framework/pull/343)
+
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.1.4...3.1.5>
+
+## v3.1.4
+
+> 更新时间：2023-03-17
+
+* 修复 Symfony Console Event Dispatcher 接口缺失 by [@sunxyw](https://github.com/sunxyw) in [PR#342](https://github.com/zhamao-robot/zhamao-framework/pull/342)
+
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.1.3...3.1.4>
+
+## v3.1.3
+
+> 更新时间：2023-03-15
+
+* 修复 Symfony Event Dispatcher 不可用 by [@sunxyw](https://github.com/sunxyw) in [PR#341](https://github.com/zhamao-robot/zhamao-framework/pull/341)
+
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.1.2...3.1.3>
+
+## v3.1.2
+
+> 更新时间：2023-03-11
+
+* 重构框架核心 by [@sunxyw](https://github.com/sunxyw) in [PR#322](https://github.com/zhamao-robot/zhamao-framework/pull/322)
+* 修复 BotActionResponse 注解事件不支持 status 限定的 Bug by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#338](https://github.com/zhamao-robot/zhamao-framework/pull/338)
+* 本次更新包含文档更新内容 2 个
+* OneBot 和框架的有关小修小补更新 by [@crazywhalecc](https://github.com/crazywhalecc) in [PR#340](https://github.com/zhamao-robot/zhamao-framework/pull/340)
+
+**源码变更记录**: <https://github.com/zhamao-robot/zhamao-framework/compare/3.1.1...3.1.2>
+
 ## v3.1.1
 
 > 更新时间：2023-03-06
